Changed Data Source connection string

--- a/DAN_XLII_Kristina_Garcia_Francisco/App.config
+++ b/DAN_XLII_Kristina_Garcia_Francisco/App.config
@@ -12,7 +12,7 @@
   <connectionStrings>
     <add name="WorkerDB" 
          connectionString= 
-            "Data Source = localhost;
+            "Data Source = localhost\SQLEXPRESS;
             Initial Catalog = WorkerDB;
             Integrated Security = True;" 
          providerName="System.Data.SqlClient" />
